# soli-api

./: .pre-commit-config.yaml  README.md  config.json  pyproject.toml
docker/: Caddyfile  Dockerfile  run.sh
docs/: conf.py  index.md
soli_api/: __init__.py  api.py  api_config.py
soli_api/models/: health.py  owl.py
soli_api/routes/: __init__.py  info.py  root.py  search.py  taxonomy.py
soli_api/templates/: __init__.py  basic_html.py  copy_iri.js  d3_graph.js  typeahead_search.js
